syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option go_package = "./proto";

enum SettingType {
  TEXT = 0;
  INTEGER = 1;
  FLOAT = 2;
  TOGGLE = 3;
  COLOR = 4;
  DATETIME = 5;
  PASSWORD = 6;
}

message SettingsCategory {
  string id = 1;
  string label = 2;
  string description = 3;
  string icon = 4;
  map<string, Setting> settings = 5;
}

message Setting {
  string id = 1;
  string label = 2;
  string description = 3;
  SettingType type = 4;
  google.protobuf.Any value = 5;
  google.protobuf.Any default = 6;
  repeated SettingOption options = 7;
  optional SettingFileSelection file_selection = 8;
}

message SettingOption {
  string label = 1;
  string description = 2;
  google.protobuf.Any value  = 3;
}

message SettingFileSelection {
  bool enabled = 1;
  bool allow_folders = 2;
  repeated string extensions = 3;
  bool multiple = 4;
  bool relative = 5;
  string default_path = 6;
}


message GetSettingRequest {
  string id = 1;
}

message GetSettingValueRequest {
  string id = 1;
}

message GetSettingValueResponse {
  google.protobuf.Any value = 1;
}

message SetSettingRequest {
  string id = 1;
  google.protobuf.Any value = 2;
}

message SetSettingsRequest {
  map<string, google.protobuf.Any> settings = 1;
}

message ListSettingsResponse {
  map<string, Setting> settings = 1;
}

// UI Configuration

// VisualComponentList is a list of all the visual components provided
// by the plugin, grouped by the section they are applicable to.
message VisualComponentList {
  repeated VisualResourceComponent resource = 1;
}

// VisualResourceComponent is a visual component that can be displayed
// in the UI within a resource.
message VisualResourceComponent {
  enum ComponentType {
    SIDEBAR = 0;
    TABLE = 1;
    TABLE_ROW = 2;
    TABLE_CELL = 3;
  }

  // The unique identifier of the component.
  string id = 1;
  // The plugin for which this component is applicable.
  string plugin = 2;
  // The type of the component.
  ComponentType type = 3;
  // The resources for which this component is applicable.
  repeated string resources = 4;
}

service SettingsPlugin {
  rpc ListSettings(google.protobuf.Empty) returns (ListSettingsResponse);
  rpc GetSetting(GetSettingRequest) returns (Setting);
  rpc GetSettingValue(GetSettingValueRequest) returns (GetSettingValueResponse);
  rpc SetSetting(SetSettingRequest) returns (google.protobuf.Empty);
  rpc SetSettings(SetSettingsRequest) returns (google.protobuf.Empty);
}
